# real-time-stock-analyzer

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: connector.json
docker/: Dockerfile
src/: consumer.py  example.py  manager.py
src/api/: API.py  BinanceAPI.py
src/data/: DataStructure.py  KafkaFactory.py  TradeDataStructure.py
src/fetch/: APIFetcher.py  BinanceFetch.py  DataStructure.py  Fetch.py  Fetcher.py
src/trade/: Analyzer.py  PriceAlert.py
