[tool.poetry]
name = "Real-Time Stock Analysis"
version = "0.1.0"
description = "Real-Time Stock Analysis"
authors = ["Régis GRAPTIN"]

[tool.poetry.dependencies]
python = "^3.8"
kafka-python = "^2.0.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
